[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "circa"
version = "0.0.1"
authors = [
  { name="marcan", email="marcan@marcan.st" },
]
description = "Consumer IR code assistant"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/marcan/circa"
Issues = "https://github.com/marcan/circa/issues"
